syntax = "proto3";
package org.zrtg.chat.common.model.proto;
option java_outer_classname="MessageBodyProto";
 
message MessageBody {
	 string title = 1; //标题
	 string content = 2;//内容
	 string time = 3;//发送时间
	 uint32 type = 4;//0 文字   1 文件
	 string extend = 5;//扩展字段
	 string username = 6;//消息发送人名称
	 string nickname = 7;//消息发送人昵称
}
 